# robot_6_DOF

robot_6_DOF_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot_6_DOF_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robot_6_DOF.srdf  ros_controllers.yaml
robot_6_DOF_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_6_DOF_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  (+3 more)
robot_6_DOF_urdf/: CMakeLists.txt  package.xml
robot_6_DOF_urdf/urdf/: base_link.part  base_link.stl  base_link_visual.stl  config.json  gripper_left_b.part  gripper_left_b.stl  gripper_left_b_visual.stl  gripper_right_b.part  gripper_right_b.stl  gripper_right_b_visual.stl  idol_gear_b.part  idol_gear_b.stl  idol_gear_b_visual.stl  link_1.part  link_1.stl  link_1_visual.stl  link_2.part  link_2.stl  link_2_visual.stl  link_3.part  link_3.stl  link_3_visual.stl  link_4.part  link_4.stl  link_4_visual.stl  link_5.part  link_5.stl  link_5_visual.stl  link_6.part  link_6.stl  link_6_visual.stl  pivot_arm_l.part  pivot_arm_l.stl  pivot_arm_l_visual.stl  pivot_arm_r.part  pivot_arm_r.stl  pivot_arm_r_visual.stl  robot.urdf  servo_gear_b.part  servo_gear_b.stl  (+1 more)
robot_hardware_interface/: CMakeLists.txt  package.xml
(+6 files in other folders)
